# hnefatafl

./: .clang-tidy  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  perft_old_game_implementation.txt
src/: AvailableMovesGenerator.cpp  AvailableMovesGenerator.hpp  BitMasks.hpp  Engine.cpp  Engine.hpp  EvaluatedMove.hpp  EvaluatedMovePath.hpp  Faction.hpp  FieldDefinitionHelper.hpp  Figur.hpp  Game.cpp  Game.hpp  GameManager.hpp  GameManagerUtils.cpp  GameManagerUtils.hpp  GameUtils.cpp  GameUtils.hpp  GlobalConfig.hpp  Hnefatafl.cpp  Human.cpp  Human.hpp  Move.hpp  MovePath.hpp  MultipleGameManager.cpp  MultipleGameManager.hpp  Negamax.cpp  Negamax.hpp  NegamaxNoAlphaBeta.cpp  NegamaxNoAlphaBeta.hpp  Perft.cpp  Perft.hpp  Player.hpp  PlayerCreationArguments.hpp  PlayerFactory.cpp  PlayerFactory.hpp  RandomMovesGenerator.cpp  RandomMovesGenerator.hpp  SearchUtils.cpp  SearchUtils.hpp  SingleGameManager.cpp  (+8 more)
tests/: TestEngine.cpp  TestGame.cpp  TestGameUtils.cpp  TestSearch.cpp  TestingUtils.cpp  TestingUtils.hpp  helper.cpp  helper.hpp  test.cpp
